[project]
name = "ssut-plots"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sagan Sutherland", email = "sagan@farthinghalearms.com" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "yt>=4.4.0",
    "pandas>=2.3",
    "h5py>=3.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
